tests/golden/errors/build_not_block_born.kso
type node
  id:int
  peers:list

fn mutate n
  build
    a = node 9 []
    set n peers [a]
    a

pub play =
  outer = node 1 []
  print "{mutate outer}"
